--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'org.apache.commons:commons-csv:1.9.0'
+    implementation 'org.apache.commons:commons-text:1.9'
+    implementation 'org.apache.tika:tika-core:1.26'
 }
